# vpinball-plugin-rust

./: .gitignore  Cargo.toml  README.md  build.rs  download_header.sh  plugin.cfg
.github/workflows/: rust.yml
fpscounter/: Cargo.toml  plugin.cfg
fpscounter/src/: lib.rs
plugin/: Cargo.toml  build.rs
plugin/src/: bindings.rs  lib.rs  test.rs
rainbow/: Cargo.toml  plugin.cfg
rainbow/src/: lib.rs
src/: fpscounter.rs  lib.rs  plugin.rs
