[package]
name = "vpinball-plugin-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpinball_plugin_rust"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
# for downloading the vpinball plugin header
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }